# minivtun-android

./: .gitignore  README.md  build.gradle  gradle.properties  import-summary.txt  local.properties
app/: build.gradle  lint-baseline.xml  proguard-rules.pro  release-key.keystore
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/android/toyvpn/: Prefs.java  ServerInfoActivity.java  ServerListActivity.java  StatusActivity.java  ToyVpnClient.java  ToyVpnConfig.java  ToyVpnConnection.java  ToyVpnService.java  Utils.java  VpnMode.java
app/src/main/java/com/github/optman/minivtun/: Client.java  Native.java
app/src/main/res/layout/: form.xml  server_info.xml  server_item.xml  server_list.xml
app/src/main/res/menu/: options.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs
