[package]
name = "minivtun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "minivtun"
crate-type = ["dylib"]

[dependencies]
minivtun-rs = { default-features = false, features = [
    "holepunch",
], version = "0.1.9", git = "https://github.com/optman/minivtun-rs" }
jni = "0.21.1"
android_logger = "0.14.1"
log = "0.4.22"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tun = "0.7.3"
libc = "0.2.164"
